--- a/client/src/main.styles.scss
+++ b/client/src/main.styles.scss
@@ -85,7 +85,7 @@ select {
 // layout
 .container {
   width: 1200px;
-  max-width: 90%;
+  max-width: 98%;
   margin: 0 auto;
 }
 
